# PDSD-v0.2

./: .gitignore  Cargo.toml
.trae/rules/: project_rules.md
PDSD/: Cargo.toml
PDSD_egui_node_graph_required_files/: editor_ui.rs  error.rs  graph.rs  index_impls.rs  node_finder.rs  traits.rs
assets/CAD/: 【系统图工具】.dwg  【系统图工具】.dwl  【系统图工具】.dwl2
docs/: PDSD项目说明文档.md
docs/user_guide/: 01数据类型定义方案.md  3.1UI层数据结构.md  4.2实现应用的 UI 和逻辑.md  PDSD 项目开发指南.md  复合数据类型定义方案.md  复合类型定义方案.md  说明文档.md
docs/user_guide/8.1配电回路节点实现/: 01对齐_配电回路节点.md  02共识_配电回路节点.md  03计划_配电回路节点.md  05完成_配电回路节点.md
docs/user_guide/修复三相平衡算法语法错误/: 01对齐_修复三相平衡算法语法错误.md  02共识_修复三相平衡算法语法错误.md  03设计_修复三相平衡算法语法错误.md  04任务_修复三相平衡算法语法错误.md  05验收_修复三相平衡算法语法错误.md  06最终_修复三相平衡算法语法错误.md  07TODO_修复三相平衡算法语法错误.md
docs/user_guide/开发配电回路节点/: 01对齐_开发配电回路节点.md  02共识_开发配电回路节点.md  03设计_开发配电回路节点.md  04任务_开发配电回路节点.md  05验收_开发配电回路节点.md
docs/user_guide/系统性完善工作/: 任务6_最终文档.md  (+15 more)
egui_node_graph/: Cargo.toml  color_hex_utils.rs  editor_ui.rs  error.rs  graph_impls.rs  lib.rs  ui_state.rs  utils.rs
examples/: circuit_node_validation.rs  node_editor_example.rs
src/: config.rs  error.rs  error_handler.rs  lib.rs  main.rs  mod.rs
src/application/: app.rs  debug_logger.rs  error.rs  integration_example.rs  mod.rs  state.rs
src/core_lib/: error.rs  mod.rs
src/editor/: data_types.rs  error.rs  mod.rs
src/export/: cad_export.rs  error.rs  report.rs
src/tests/: test_auto_connections.rs
src/ui/: error_display.rs
tests/: distribution_box_integration.rs  error_handling_integration.rs
tests/unit/: circuit_node_tests.rs
(+84 files in other folders)
