[package]
name = "Power_Distribution_System_Diagram"
description = "通过节点编辑器来构建配电系统图架构"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["WuwuZhang"]
homepage = "https://github.com/WuwuZhang0019/PDSD.git"

[features]
default = ["persistence"] 
persistence = ["slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
egui_node_graph = { path = "egui_node_graph" }
egui = { version = "0.32.3" }
eframe = { version = "0.32.3" }
slotmap = { version = "1.0.7" }
smallvec = { version = "1.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.21.3"
rand = "0.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.38"

[[bin]]
name = "Power_Distribution_System_Diagram"
path = "src/main.rs"